# franklinwh-cloud

./: .coverage  .env.example  .gitignore  AGENT.md  API_CLIENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FORK_ANALYSIS.md  FranklinWH Cloud.code-workspace  HISTORY.md  HTTPToolkit_2026-03-21_08-11.textClipping  ISSUES.md  LICENSE  MIGRATION.md  README.md  UPSTREAM_STRATEGY.md  agent.md  defect_list.md  franklinwh_cloud_survey_dump_1774568557.json  mkdocs.yml  parse_hars.py  parse_tou.py  pyproject.toml  scratch.py  scratch_dispatch.json  test.py  test_library.py  test_tou.py  tmp_live_auth_test.py  tmp_live_wrapper_test.py  unmapped_endpoints.json  update.sh  verify_soc.py
.agents/: .last_checkpoint
.agents/policies/: change_management.md  live_test_protocol.md  pii_policy.md  release_policy.md  telemetry_collection.md
.agents/workflows/: checkpoint.md  commit-after-phase.md  end-of-session.md  onboard.md  sync-to-test.md
.cursor/rules/: project.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: docs.yml  pii-check.yml  publish.yml  test.yml
docs/: AGENT_GROUND_TRUTH.md  AI_AGENT_RISK_ASSESSMENT.md  API_COOKBOOK.md  API_ENDPOINTS_MAPPING.md  API_FIELD_REGISTRY.md  API_METRICS_VISUALIZATION.md  API_REFERENCE.md  BACKWARD_COMPATIBILITY.md  CACHING_STRATEGY.md  CAPTURING_HAR_TRAFFIC.md  CLI_FUTURE_TODO.md  CLI_SCHEMA_COMMAND.md  CURRENT_APP_VERSION.txt  DEVICE_CATALOG_DESIGN.md  DISCOVER_IMPLEMENTATION_PLAN.md  DISCOVER_VS_SUPPORT.md  DOCUMENTATION_TODO.md  EMULATOR_ARCHITECTURE.md  HOWTO_PYTHON.md  INCIDENT_001_AUTH_BREAKAGE.md  LOGGING.md  LOGGING_TODO.md  MQTT_CMD_CATALOG.md  OPENAPI_GENERATOR.md  OPERATING_MODES_GUIDE.md  POSTHOG_POC.md  QA_TEST_PLAN.md  RATE_LIMITING.md  REGION_QUIRKS.md  SANDBOX_SETUP.md  SCHEDULING.md  SERIAL_NUMBERS.md  TELEMETRY.md  TOU_SCHEDULE_GUIDE.md  TOU_TARIFF_REFERENCE.md  TROUBLESHOOTING.md  cli-raw.md  franklinwh_openapi.json  getting-started.md  index.md  (+1 more)
docs/archive/: CLI_FUTURE_TODO.md
docs/schemas/: cli_discover_schema.json  cli_support_schema.json
docs/troubleshooting/: 2026-03-21_wifi_dhcp_failure.md
emulator/: README.md  main.py
franklinwh_cloud/: __init__.py  auth.py  cache.py  cli.py  cli_output.py  client.py  discovery.py  endpoints.py  exceptions.py  franklinwh.ini.example  metrics.py  models.py  telemetry.py  wrapper.py
franklinwh_cloud/cli_commands/: __init__.py  accessories.py  bms.py  diag.py  discover.py  fetch.py  metrics.py  mode.py  monitor.py  raw.py  sc.py  schema.py  status.py  support.py  tou.py
franklinwh_cloud/const/: __init__.py  device_catalog.json  devices.py  modes.py  states.py  test_fixtures.py  tou.py
franklinwh_cloud/mixins/: __init__.py  account.py  devices.py  discover.py  modes.py  power.py  stats.py  storm.py  tou.py
scripts/: check_pii.py  gen_api_mapping.py  openapi_generator.py  pre-commit-template.sh  run_chaos_harness.sh
tests/: conftest.py  run_and_record.sh  test_auth.py  test_backward_compatibility.py  test_build_payload.py  test_cli_core.py  test_cli_mode.py  test_cli_schemas.py  test_cli_tou.py  test_client_auth_retry.py  test_const.py  test_discover.py  test_get_stats.py  test_grid_status.py  test_integration.py  test_live.py  test_live_mode.py  test_method_cache.py  test_method_tracking.py  test_metrics.py  test_mode_soc.py  test_modes.py  test_network.py  test_retry.py  test_sc.py  test_set_mode.py  test_support.py  test_telemetry.py  test_token_fetcher.py  test_tou_price.py  test_tou_set.py  test_wrapper.py
tools/: har_to_openapi.py
(+37 files in other folders)
