[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "franklinwh-cloud-client"
version = "0.3.0"
description = "FranklinWH Cloud API client library — performance monitoring, rate limiting, edge tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]",
    "jsonschema",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
franklinwh-cli = "franklinwh_cloud.cli:main"

[tool.setuptools.packages.find]
include = ["franklinwh_cloud*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: requires real API credentials and aGate (deselect with '-m not live')",
]
